<resources>
    <string name="app_name">Story App</string>
    <string name="login_image_desc">Login Image</string>
    <string name="title_login_page">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="copyright">© 2022 Story App</string>
    <string name="name">Name</string>
    <string name="title_register_page">Register</string>
    <string name="register">Register</string>
    <string name="register_image_desc">Register Image</string>
    <string name="register_hint">Don\'t have an account?</string>
    <string name="login_hint">Already have an account?</string>
    <string name="msg_empty_email">Email cannot be empty!</string>
    <string name="msg_invalid_email">Please input valid email!</string>
    <string name="msg_empty_story">Don\'t have any stories</string>
    <string name="fab_desc">Add new story</string>
    <string name="story_author">The name of story author</string>
    <string name="story_description">The description of stories</string>
    <string name="logout">Logout</string>
    <string name="photo_desc">Photo Story</string>
    <string name="uploaded_at">Uploaded at %1$s</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description_hint">Inpur your photo description here</string>
    <string name="upload">Upload</string>
    <string name="no_permission">No permission granted</string>
    <string name="system_error">System error occurred, please try again.</string>
    <string name="title_msg_error">Oops!</string>
    <string name="title_msg_success">Yeah!</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="timeout">Timeout</string>
    <string name="retry">Try again</string>
</resources>